- Refactor documentation